# flatnav

./: .buildinfo  .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CNAME  Dockerfile  Makefile  README.md  bigann_queries.npy  build.sh  cibuild.sh  convert_bigann_benchmark_datasets.py  convert_bigann_datasets.py  convert_spacev.py  convert_spacev_dataset.py  cpp_api.html  degdistribution.py  dump.py  flatnav_python.html  format.sh  genindex.html  include_readme.html  index.html  logs.txt  logs_simd.txt  objects.inv  plotting.py  pre-idx.h  pruning_benchmark.py  python_bindings.cpp  requirements.txt  run_sift.sh  search.html  searchindex.js
.github/workflows/: build-docs.yaml  cicd.yaml  docker-test.yaml  publish-python-extension.yaml  publish-python-library.yaml
.test-env/: pyvenv.cfg
_sources/: index.rst.txt
benchmarks/: CMakeLists.txt  README.md  config.toml  config.yaml  config_parser.h  construct_npy.cpp  evaluate_faiss.py  hnsw_pq.py  pyproject.toml  runner.cpp
cmake/: FindAVX.cmake  FindGoogleTest.cmake  find_avx.cmake  find_cnpy_and_zlib.cmake
developmental-features/quantization/: CentroidsGenerator.h  ProductQuantization.h  Utils.h
developmental-features/quantization/tests/: test_kmeans.cpp  test_pq_e2e.cpp
docker/: Dockerfile  build.sh
docs/: Doxyfile  conf.py  cpp_api.rst  flatnav_python.rst  generate_docs.sh  include_readme.rst  index.rst  pyproject.toml
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
examples/: index_construction_float32.cpp
experiments/: .gitignore  1  HUBNESS_EXPERIMENTS.md  Makefile  README.md  betweenness_centrality.py  build-index.py  compare_graphs.py  compute-k-occurrence-dists.py  correlate_node_access_and_order.py  data_loader.py  delete_file.py  dvc.yaml  evaluate_faiss.py  flatnav_api.py  generate-datasets.py  generate-distributions.py  generate-hubness-scores.py  hnsw_swgraph_experiments.py  hubness-scores.json  hubness.py  hubness__.html  hubness_speed_test.py  index-sizes.py  kde_plots.py  logs.txt  metrics.json  node-access-patterns.py  plot_node_access_counts_distribution.py  plot_speed_test_results.py  plot_stats_test_results.py  plotting_utils.py  push-snapshot-to-s3.py  push_snapshot_to_s3.py  pyproject.toml  run-all.sh  run-benchmark.py  run-big-bench.py  run_benchmark.py  run_big_benches.py  (+3 more)
experiments/big-ann/: run_bigann.py
experiments/dvclive/: metrics.json  params.yaml
experiments/dvclive/plots/metrics/: Recall@100.tsv
experiments/mnist-784-euclidean/dvclive/: metrics.json  params.yaml
experiments/mnist-784-euclidean/dvclive/plots/metrics/: QPS.tsv  Recall@100.tsv
experiments/plotting/: lin_zhao_webplotdigitizer.py  metrics.py  plot.py  plot_ann_bench_p50.py  plot_ann_bench_p99.py  plot_bigann_p50.py  plot_bigann_p99.py  plot_glove.py
experiments/sift-128-euclidean/dvclive/: metrics.json  params.yaml
experiments/sift-128-euclidean/dvclive/plots/metrics/: QPS.tsv  Recall@100.tsv
flatnav/: DistanceInterface.h  Index.h  distance_interface.h  index.h  lib.cpp
flatnav/distances/: DistanceFactory.h  DistanceInterface.h  IPDistanceDispatcher.h  InnerProductDistance.h  InnerProductDistanceSpecializations.h  L2DistanceDispatcher.h  SQDistance.h  SimdSpecializations.h  SquaredL2Distance.h  SquaredL2DistanceSpecializations.h  SquaredL2Extensions.h  inner_product_distance.h  inner_products_from_hnswlib.h  squared_l2_distance.h
flatnav/index/: Index.h
flatnav/tests/: CMakeLists.txt  test_distances.cpp  test_serialization.cpp  test_simd_int8_instructions.cpp
flatnav/util/: Datatype.h  ExplicitSet.h  GorderPriorityQueue.h  InnerProductSimdExtensions.h  Macros.h  Multithreading.h  ParallelConstructs.h  PreprocesorUtils.h  PreprocessorUtils.h  Reordering.h  SIMDDistanceSpecializations.h  SIMDIntrinsics.h  SimdAvx.h  SimdBaseTypes.h  SimdUtils.h  SquaredL2SimdExtensions.h  VisitedNodesHandler.h  VisitedSetPool.h  gorder_priority_queue.h  inner_product_simd_extensions.h  reordering.h  simd_base_types.h  squared_l2_simd_extensions.h  verifysimd.h  visited_set_pool.h
flatnav_python/: README.md  bindings.cpp  build_wheel.sh  docs.h  install_flatnav.sh  pyproject.toml  python_bindings.cpp  setup.py  test_index.py
flatnav_python/flatnav/: __init__.py  utils.py
flatnav_python/flatnav.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
flatnav_python/flatnav/utils/: __init__.py  utils.py
flatnav_python/unit_tests/: test_index.py  test_parallel_insertions.py  test_utils.py
include/flatnav/distances/: DistanceInterface.h  IPDistanceDispatcher.h  InnerProductDistance.h  L2DistanceDispatcher.h  SquaredL2Distance.h
include/flatnav/index/: Allocator.h  Index.h  PrimitiveTypes.h  Pruning.h  PruningEnum.h
include/flatnav/tests/: test_distances.cpp  test_serialization.cpp
include/flatnav/util/: Datatype.h  GorderPriorityQueue.h  InnerProductSimdExtensions.h  Multithreading.h  Reordering.h  SquaredL2SimdExtensions.h  (+1 more)
k-occurrence-dists/: glove-100-angular.pkl  nytimes-256-angular.pkl
pruning_benchmarks/: .gitignore  Makefile  data_loader.py  latency_plots.py  metrics.py  plotting.py  runner.py
python/: CMakeLists.txt  pyproject.toml  setup.py
python-bindings/: .gitignore  CMakeLists.txt  README.md  build-lib.sh  get-wheel-key.py  pyproject.toml  setup.py
python-bindings/src/flatnav/: __init__.py  bindings.cpp  docs.h
python-bindings/unit_tests/: test_index.py
python/flatnav.egg-info/: PKG-INFO  SOURCES.txt
python/src/: bindings.cpp
quantization/: BaseProductQuantization.h  CMakeLists.txt  CentroidsGenerator.h  Config.h.in  LowPrecisionQuantization.h  ProductQuantization.h  Utils.h  product_quantization.h  utils.h
quantization/tests/: CMakeLists.txt  test_kmeans.cpp  test_pq_e2e.cpp  test_pq_manager.cpp
tools/: CMakeLists.txt  cereal_tests.cpp  construct_npy.cpp  dump_graph.cpp  flatnav_pq.cpp  graph_stats.cpp  index_construction.cpp  load_mtx.cpp  query.cpp  query_npy.cpp  query_sparse.cpp  reorder_npy.cpp  run_build.sh  run_query.sh  spectral_sparsifier.cpp
