[tool.poetry]
name = "benchmarks"
version = "0.1.0"
description = "Benchmark Flanav against common ANNS datasets"
authors = ["Blaise Muhirwa"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
mlflow = "^2.8.0"
black = "^23.11.0"
faiss-cpu = "^1.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
