[tool.poetry]
name = "docs"
version = "0.1.0"
description = "Documentation for the C++/Python FlatNav library"
authors = ["Your Name <you@example.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sphinx = "^7.2.6"
breathe = "^4.35.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
