[tool.poetry]
name = "experiments"
version = "0.1.0"
description = "Track benchmark experiments."
authors = ["BlaiseMuhirwa <blaisemuhirwa3@gmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
black = "^23.11.0"
numpy = "^1.26.1"
psutil = "^5.9.8"
pydantic = "^2.6.4"
boto3 = "^1.34.98"
scipy = "^1.11.4"
matplotlib = "^3.8.2"
seaborn = "^0.13.1"
flatnav = {path = "../flatnav_python/dist/flatnav-0.0.1-cp310-cp310-linux_x86_64.whl"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
