[tool.poetry]
name = "experiments"
version = "0.1.0"
description = "Track benchmark experiments."
authors = ["BlaiseMuhirwa <blaisemuhirwa3@gmail.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
black = "^23.11.0"
numpy = "^1.26.1, <2.0"
matplotlib = "^3.8.2"
psutil = "^5.9.8"
pydantic = "^2.6.4"
flatnav = "^0.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
