[tool.poetry]
name = "flatnav"
version = "0.0.1"
description = "Graph kNN with reordering. "
homepage="https://randorithms.com"
authors = [
  "Benjamin Coleman <benjamin.ray.coleman@gmail.com>",
  "Blaise Munyampirwa <blaisemunyampirwa@gmail.com>",
  "Nicholas Meisburger",
  "Joshua Engels",
  "Vihan Lakshman <vihan.lakshman@gmail.com>"
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "3.10.12"
pybind11 = "2.8.1"
setuptools = "68.2.2"

[tool.poetry.dev-dependencies]
black = "^23.11.0"


[build-system]
requires = ["setuptools>=68", "wheel", "pybind11=2.8.1", "python=3.10.12"]
build-backend = "setuptools.build_meta"