[tool.poetry]
name = "flatnav"
version = "0.0.1"
description = "Graph kNN with reordering. "
homepage="https://randorithms.com"
authors = [
  "Benjamin Coleman <benjamin.ray.coleman@gmail.com>",
  "Blaise Munyampirwa <blaisemunyampirwa@gmail.com>",
  "Nicholas Meisburger",
  "Joshua Engels",
  "Vihan Lakshman <vihan.lakshman@gmail.com>"
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.9"
pybind11 = "2.10.4"
setuptools = "68.2.2"
wheel = "0.41.3"

[tool.poetry.dev-dependencies]
black = "^23.11.0"
pytest = "^7.4.3"
numpy = "^1.26.2"
h5py = "^3.10.0"
requests = "^2.31.0"



[build-system]
requires = ["setuptools>=68", "wheel", "pybind11=2.10.4", "python>=3.9"]
build-backend = "setuptools.build_meta"