[build-system]
requires = [
  "scikit-build>=0.13",
  "cmake>=3.21",
  "numpy>=1.21.0,<2"
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
build = ["cp*-{manylinux_x86_64,macosx_x86_64}"]
skip = "cp36-manylinux-x86_64"


archs = ["x86_64"]
build-frontend = "pip"
config-settings = {}
dependency-versions = "pinned"
environment-pass = []
build-verbosity = "3"

before-all = "yum --disablerepo=epel install -y devtoolset-11-gcc devtoolset-11-gcc-c++"
repair-wheel-command = ""


container-engine = "docker"

manylinux-x86_64-image = "manylinux2014"
manylinux-pypy_x86_64-image = "manylinux2014"

[tool.cibuildwheel.linux]
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"
before-test = "pip install 'pytest' 'black' 'numpy<2.0' 'h5py' 'requests'"
test-command = "pytest -vs {package}/unit_tests"

[tool.cibuildwheel.macos]
before-all = "brew install libomp"
before-test = "pip install 'pytest' 'black' 'numpy<2.0' 'h5py' 'requests'"
test-command = "pytest -vs {package}/unit_tests"
